[workspace]
members = [
    "atrium-api",
    "atrium-common",
    "atrium-crypto",
    "atrium-repo",
    "atrium-xrpc",
    "atrium-xrpc-client",
    "atrium-identity",
    "atrium-oauth",
    "bsky-cli",
    "bsky-sdk",
    "examples/concurrent",
    "examples/firehose",
    "examples/video",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
repository = "https://github.com/sugyan/atrium"
license = "MIT"
keywords = ["atproto", "bluesky"]

[workspace.dependencies]
# Intra-workspace dependencies
atrium-api = { version = "0.25.2", path = "atrium-api", default-features = false }
atrium-common = { version = "0.1.1", path = "atrium-common" }
atrium-crypto = { version = "0.1.2", path = "atrium-crypto" }
atrium-identity = { version = "0.1.3", path = "atrium-identity" }
atrium-xrpc = { version = "0.12.2", path = "atrium-xrpc" }
atrium-xrpc-client = { version = "0.5.13", path = "atrium-xrpc-client" }
bsky-sdk = { version = "0.1.18", path = "bsky-sdk" }

# async in streams
async-stream = "0.3"

# DAG-CBOR codec
ipld-core = { version = "0.4.1", default-features = false, features = ["std"] }
serde_ipld_dagcbor = { version = "0.6.0", default-features = false, features = ["std"] }

# Parsing and validation
base64 = "0.22.1"
chrono = "0.4"
hex = "0.4.3"
langtag = "0.3"
multibase = "0.9.1"
regex = "1"
serde = "1.0.202"
serde_bytes = "0.11.9"
serde_html_form = "0.2.6"
serde_json = "1.0.125"
unsigned-varint = "0.8"

# Cryptography
ecdsa = "0.16.9"
elliptic-curve = "0.13.6"
jose-jwa = "0.1.2"
jose-jwk = { version = "0.1.2", default-features = false }
k256 = { version = "0.13.3", default-features = false }
p256 = { version = "0.13.2", default-features = false }
rand = "0.8.5"
sha2 = "0.10.8"

# Networking
dashmap = "6.1.0"
futures = { version = "0.3.30", default-features = false, features = ["alloc"] }
hickory-proto = { version = "0.24.3", default-features = false }
hickory-resolver = "0.24.1"
http = "1.1.0"
lru = "0.12.4"
moka = "0.12.8"
tokio = { version = "1.43", default-features = false }
tokio-util = "0.7"

# HTTP client integrations
isahc = "1.7.2"
reqwest = { version = "0.12", default-features = false, features = ["gzip"] }

# Errors
anyhow = "1.0.86"
thiserror = "1.0"

# CLI
clap = { version = "~4.4.18", features = ["derive"] }
dirs = "5.0.1"

# Testing
gloo-timers = { version = "0.3.0", features = ["futures"] }
mockito = "=1.6.1"

# WebAssembly
wasm-bindgen-test = "0.3.41"
web-time = "1.1.0"
bumpalo = "~3.14.0"

# Code generation
trait-variant = "0.1.2"

# Others
base64ct = "=1.6.0"
litemap = "=0.7.4"
native-tls = "=0.2.13"
zerofrom = "=0.1.5"
