[package]
name = "atprs-xrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
