[package]
name = "atrium-api"
version = "0.16.0"
authors = ["sugyan <sugi1982+github@gmail.com>"]
edition.workspace = true
rust-version.workspace = true
description = "API library for AT Protocol (Bluesky)"
documentation = "https://docs.rs/atrium-api"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
atrium-xrpc.workspace = true
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
cid.workspace = true
http.workspace = true
langtag = { workspace = true, features = ["serde"] }
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_bytes.workspace = true
tokio = { workspace = true, optional = true }
libipld-core = { workspace = true, optional = true }

[features]
default = ["agent"]
agent = ["tokio/sync"]
dag-cbor = ["cid/serde-codec", "libipld-core/serde-codec"]

[dev-dependencies]
atrium-xrpc-client.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_ipld_dagcbor = { git = "https://github.com/sugyan/serde_ipld_dagcbor.git", rev = "345b240" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
