[package]
name = "atrium-api"
version = "0.20.1"
authors = ["sugyan <sugi1982+github@gmail.com>"]
edition.workspace = true
rust-version.workspace = true
description = "API library for AT Protocol (Bluesky)"
documentation = "https://docs.rs/atrium-api"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
atrium-xrpc.workspace = true
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
http.workspace = true
ipld-core = { workspace = true, features = ["serde"] }
langtag = { workspace = true, features = ["serde"] }
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_bytes.workspace = true
tokio = { workspace = true, optional = true }

[features]
default = ["agent"]
agent = ["tokio/sync"]

[dev-dependencies]
atrium-xrpc-client.workspace = true
futures.workspace = true
serde_json.workspace = true
serde_ipld_dagcbor.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
wasm-bindgen-test.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
