[package]
name = "atrium-cli"
version = "0.1.0"
authors = ["sugyan <sugi1982+github@gmail.com>"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
atrium-api.workspace = true
atrium-xrpc-client.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
