[package]
name = "atrium-cli"
version = "0.1.10"
authors = ["sugyan <sugi1982+github@gmail.com>"]
edition.workspace = true
rust-version.workspace = true
description = "CLI application for AT Protocol using ATrium API"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
atrium-api.workspace = true
atrium-xrpc-client.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

[[bin]]
name = "atrium-cli"
path = "src/bin/main.rs"
