[package]
name = "atrium-codegen"
version = "0.1.0"
edition = "2021"
authors = ["sugyan <sugi1982+github@gmail.com>"]

[dependencies]
atrium-lex = { path = "../atrium-lex" }
heck = "0.4.1"
itertools = "0.10.5"
proc-macro2 = "1.0.56"
quote = "1.0.26"
serde_json = "1.0"
syn = { version = "2.0.15", features = ["full"] }
