[package]
name = "atrium-crypto"
version = "0.1.1"
authors = ["sugyan <sugi1982+github@gmail.com>"]
edition.workspace = true
rust-version.workspace = true
description = "Cryptographic library providing basic helpers for AT Protocol"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecdsa = { workspace = true, features = ["std", "signing", "verifying"] }
k256 = { workspace = true, features = ["ecdsa"] }
p256 = { workspace = true, features = ["ecdsa"] }
multibase.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
