[package]
name = "atrium-lex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_repr = "0.1.12"
serde_with = "2.3.2"

[dev-dependencies]
serde_json = "1.0"
