[package]
name = "atrium-repo"
version = "0.0.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
edition.workspace = true
rust-version.workspace = true
description = "Library for handling AT Protocol (Bluesky) repositories and MSTs"
documentation = "https://docs.rs/atrium-repo"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dev-dependencies]
# atrium-api.features = ["bluesky"]
atrium-crypto.workspace = true
rand.workspace = true

tokio.workspace = true
tokio.features = ["io-util", "macros", "rt"]

[dependencies]
atrium-api.workspace = true

# Async
async-stream.workspace = true
futures = { workspace = true, features = ["std"] }
tokio.workspace = true
tokio-util = { workspace = true, features = ["compat"] }

# Encodings
ipld-core = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_ipld_dagcbor.workspace = true
unsigned-varint = { workspace = true, features = ["futures"] }

# Errors
thiserror.workspace = true
sha2.workspace = true
