[package]
name = "atrium-xrpc-client"
version = "0.1.2"
authors = ["sugyan <sugi1982+github@gmail.com>"]
edition = "2021"
description = "XRPC Client library for AT Protocol (Bluesky)"
documentation = "https://docs.rs/atrium-xrpc-client"
readme = "README.md"
repository = "https://github.com/sugyan/atrium"
license = "MIT"
keywords = ["atproto", "bluesky"]

[dependencies]
async-trait = "0.1.74"
atrium-xrpc = "0.7.0"
http = "0.2.9"

[dependencies.isahc]
version = "1.7.2"
optional = true

[dependencies.reqwest]
version = "0.11.22"
default-features = false
optional = true

[dependencies.surf]
version = "2.3.2"
default-features = false
optional = true

[features]
default = ["reqwest-native"]
isahc = ["dep:isahc"]
reqwest-native = ["reqwest/native-tls"]
reqwest-rustls = ["reqwest/rustls-tls"]
surf = ["dep:surf"]

[dev-dependencies]
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }
http-client = { version = "6.5.3", default-features = false, features = ["h1_client", "rustls"] }
mockito = "1.2.0"
tokio = { version = "1.33.0", features = ["macros"] }
serde = { version = "1.0.192", features = ["derive"] }
futures = { version = "0.3.29", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
