[package]
name = "atrium-xrpc-client"
version = "0.2.0"
authors = ["sugyan <sugi1982+github@gmail.com>"]
edition.workspace = true
rust-version.workspace = true
description = "XRPC Client library for AT Protocol (Bluesky)"
documentation = "https://docs.rs/atrium-xrpc-client"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
async-trait.workspace = true
atrium-xrpc.workspace = true
http.workspace = true
isahc = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
surf = { workspace = true, optional = true }

[features]
default = ["reqwest-native"]
isahc = ["dep:isahc"]
reqwest-native = ["reqwest/native-tls"]
reqwest-rustls = ["reqwest/rustls-tls"]
surf = ["dep:surf"]

[dev-dependencies]
surf = { workspace = true, features = ["h1-client-rustls"] }
http-client = { workspace = true, features = ["h1_client", "rustls"] }
mockito.workspace = true
tokio = { workspace = true, features = ["macros"] }
serde = { workspace = true, features = ["derive"] }
futures.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
