[package]
name = "atrium-xrpc-client"
version = "0.5.2"
authors = ["sugyan <sugi1982+github@gmail.com>"]
edition.workspace = true
rust-version.workspace = true
description = "XRPC Client library for AT Protocol (Bluesky)"
documentation = "https://docs.rs/atrium-xrpc-client"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
async-trait.workspace = true
atrium-xrpc.workspace = true
http.workspace = true
isahc = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[features]
default = ["reqwest-default-tls"]
isahc = ["dep:isahc"]
reqwest = ["dep:reqwest"]
reqwest-default-tls = ["reqwest/default-tls"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
reqwest = { workspace = true, features = ["native-tls", "rustls-tls"] }
mockito.workspace = true
tokio = { workspace = true, features = ["macros"] }
serde = { workspace = true, features = ["derive"] }
futures.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
