[package]
name = "atrium-xrpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atrium-api = { path = "../atrium-api" }
ciborium = "0.2.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_ipld_dagcbor = "0.3.0"
