[package]
name = "atrium-xrpc-server"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atrium-api = "0.15"
anyhow = "1.0.71"
libipld-core = { version = "0.16.0", features = ["serde-codec"] }
serde_ipld_dagcbor = "0.3.0"
