[package]
name = "atrium-xrpc-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atrium-api = "0.15"
anyhow.workspace = true
libipld-core = { workspace = true, features = ["serde-codec"] }
serde_ipld_dagcbor.workspace = true
