[package]
name = "atrium-xrpc"
version = "0.8.0"
authors = ["sugyan <sugi1982+github@gmail.com>"]
edition = "2021"
rust-version.workspace = true
description = "XRPC library for AT Protocol (Bluesky)"
documentation = "https://docs.rs/atrium-xrpc"
readme = "README.md"
repository = "https://github.com/sugyan/atrium"
license = "MIT"
keywords = ["atproto", "bluesky"]

[dependencies]
async-trait = "0.1.68"
http = "0.2.9"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_qs = "0.12.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.33.0", features = ["macros", "rt"] }
