[package]
name = "bsky-cli"
version = "0.1.27"
authors = ["sugyan <sugi1982+github@gmail.com>"]
edition.workspace = true
rust-version.workspace = true
description = "CLI application for Bluesky using ATrium API"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords = ["atproto", "bluesky", "atrium", "cli"]

[dependencies]
anyhow.workspace = true
bsky-sdk.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

[[bin]]
name = "bsky-cli"
path = "src/bin/main.rs"
