[package]
name = "atrium-oauth-client"
version = "0.1.0"
authors = ["sugyan <sugi1982+github@gmail.com>"]
edition.workspace = true
rust-version.workspace = true
description = "Core library for implementing AT Protocol OAuth clients"
documentation = "https://docs.rs/atrium-oauth-client"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords = ["atproto", "bluesky", "oauth"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
atrium-api = { workspace = true, default-features = false }
atrium-xrpc.workspace = true
reqwest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_html_form.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = ["default-client"]
default-client = ["reqwest/default-tls"]
