[package]
name = "atrium-oauth-client"
version = "0.1.0"
authors = ["sugyan <sugi1982+github@gmail.com>"]
edition.workspace = true
rust-version.workspace = true
description = "Core library for implementing AT Protocol OAuth clients"
documentation = "https://docs.rs/atrium-oauth-client"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords = ["atproto", "bluesky", "oauth"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atrium-api = { workspace = true, default-features = false }
atrium-identity.workspace = true
atrium-xrpc.workspace = true
base64.workspace = true
chrono.workspace = true
ecdsa = { workspace = true, features = ["signing"] }
elliptic-curve.workspace = true
jose-jwa.workspace = true
jose-jwk = { workspace = true, features = ["p256"] }
p256 = { workspace = true, features = ["ecdsa"] }
rand = { workspace = true, features = ["small_rng"] }
reqwest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_html_form.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
trait-variant.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
hickory-resolver.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = ["default-client"]
default-client = ["reqwest/default-tls"]
