[package]
name = "concurrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atrium-api = { path = "../../atrium-api" }
atrium-xrpc-client = { path = "../../atrium-xrpc-client" }

clap.workspace = true
futures.workspace = true
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
